# eavt-sql

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml  run_tests.sh
docs/: result-cursors.md  roaring-bitmaps.md  slot-dispatch.md  spier-map.md  sql-reference.md  vm-spec.md
dynspire-commons/: Cargo.toml  README.md  build.rs
dynspire-commons/src/: compiler.dspi  datalog.dspi  lib.rs  opaque_types.dspi  planner.dspi  query_engine.dspi  shared_types.dspi  sql_frontend.dspi  sql_parse.dspi  transactor.dspi  value.rs
dynspire-commons/src/compiler/: tower.rs
dynspire-commons/src/datalog/: ast.rs  resolve.rs  tower.rs
dynspire-commons/src/planner/: ast.rs  tower.rs
dynspire-commons/src/query_ir/: mod.rs  opcodes.rs  spec_kind.rs
dynspire-commons/src/sql_frontend/: tower.rs
dynspire-commons/src/sql_parse/: ast.rs  tower.rs
dynspire-commons/src/transactor/: cursor.rs  keys.rs  query_codec.rs  resolver_consts.rs  tower.rs  types.rs
dynspire-libs/: Cargo.toml
dynspire-libs/src/: lib.rs
eavt-cli/: Cargo.toml  README.md  build.rs
eavt-cli/src/: main.rs
eavt-server/: Cargo.toml  build.rs
eavt-server/src/: main.rs
proto/: eavt.proto
py_eavt_client/: pyproject.toml
py_eavt_client/src/eavt_client/: __init__.py  client.py  eavt_pb2.py  eavt_pb2_grpc.py
py_eavt_client/tests/: conftest.py  test_client.py
scripts/: inspect_generated_code.py  inspect_plan.py
spier-blobstore-file/: Cargo.toml  README.md  build.rs
spier-blobstore-file/src/: lib.rs
spier-blobstore-memory/: Cargo.toml  README.md
spier-blobstore-memory/src/: lib.rs
spier-blobstore-s3/: Cargo.toml  README.md
spier-blobstore-s3/src/: lib.rs
spier-compiler/: Cargo.toml  build.rs
spier-compiler/src/: compiler.rs  datalog.rs  lib.rs
spier-datalog/: Cargo.toml  build.rs
spier-datalog/src/: lib.rs  translate.rs
spier-eavt-query/: Cargo.toml  build.rs
spier-eavt-query/src/: lib.rs  register_types.dspi
spier-eavt-query/src/engine/: dynspire_engine.rs  mod.rs  opcodes.rs  scanner.rs  session.rs  vm.rs
spier-journal-file/: Cargo.toml  README.md  build.rs
spier-journal-file/src/: lib.rs
spier-kvstore/: Cargo.toml  build.rs
spier-kvstore/src/: blob_store.rs  error.rs  generic_page_store.rs  keys.rs  lib.rs  merge_iter.rs  page_store.rs  pages.rs  store.rs
spier-kvstore/src/idl/: blobstore.dspi  journal.dspi  kvstore.dspi  memtable.dspi  storage_opaque.dspi
spier-memtable/: Cargo.toml  build.rs
spier-memtable/src/: lib.rs
spier-planner/: Cargo.toml  build.rs
spier-planner/src/: lib.rs  planner.rs
spier-sql-frontend/: Cargo.toml  build.rs
spier-sql-frontend/src/: lib.rs
spier-sql-parse/: Cargo.toml  build.rs
spier-sql-parse/src/: lexer.rs  lib.rs  parser.rs
spier-sql-parse/tests/: conftest.py  test_parse.py
spier-transactor/: Cargo.toml  build.rs
spier-transactor/src/: eavt.rs  keys.rs  lib.rs  register_types.dspi  resolver.rs
src/eavt_sql/: __init__.py  _ffi.py  engine.py  query_codec.py  sql_parse_client.py  types.py
tests/: bench.py  bench_compile_vs_exec.py  bench_heavy.py  conftest.py  helpers.py  test_blob.py  test_compiler_json.py  test_config_driven.py  test_config_s3_moto.py  test_dedup.py  test_eavt_ctypes.py  test_engine.py  test_journal_recovery.py  test_large_values.py  test_partition.py  test_per_pattern_asof.py  test_read_only_ctypes.py  test_reverse_scan_ctypes.py  test_spier_journal_ctypes.py  test_spier_transactor_ctypes.py  test_sql.py  test_tx.py  test_tx_join.py
