[project]
name = "eavt-sql"
version = "0.1.0"
description = "Data engine based on the Datom (EAVT) model with SQL query language and custom SSTable storage"
readme = "README.md"
license = "MIT"
authors = [{ name = "Fabio Ferrari", email = "fabio@ferraribr.com" }]
requires-python = ">=3.13"
repository = "https://github.com/quartzo/eavt-sql"
dependencies = [
    "orjson>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eavt_sql"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "moto[s3,server]>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "spier-sql-parse/tests"]
