[package]
name = "eavt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dynspire = { git = "https://github.com/quartzo/dynspire" }
dynspire-commons = { path = "../dynspire-commons" }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13"
