[package]
name = "spier-planner"
version = "0.1.0"
edition = "2021"
description = "DynSpire Spier — Query planner (Datalog IR → Query Plan, cost-based join ordering)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dynspire = { git = "https://github.com/quartzo/dynspire" }
dynspire-commons = { path = "../dynspire-commons" }

[build-dependencies]
dynspire-codegen = { git = "https://github.com/quartzo/dynspire" }
