[package]
name = "spier-sql-frontend"
version = "0.1.0"
edition = "2021"
description = "DynSpire Spier — SQL frontend (parse + datalog IR, stage 1 of compilation)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dynspire = { git = "https://github.com/quartzo/dynspire" }
dynspire-commons = { path = "../dynspire-commons" }

[build-dependencies]
dynspire-codegen = { git = "https://github.com/quartzo/dynspire" }
